--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
-    <title>Argon Design System React by Creative Tim</title>
+    <title>Don Bandy's Personal Portfolio</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
